$Id$

NOTE: This is the 2.0.0 development branch.
Put code changes right below the 2.0.0+CVS label below.

Version 2.0.0+CVS (?? ??? 2011)
 - 21-Nov-11 bb Cut dupe code and rearange some to try to get "translate.js.php"
   to work from "install/index.php".
   Fix typos.
   Move more CSS/JS to external files.
   Combine "includes/menu/themes/default/theme.css"
     into "includes/css/styles.css". Cut some duplicate CSS and reorganize it.
   Finish moving "js/datesel.php" to "js/datesel.js".
   The cookie "webcalendar_csscache" was only used by "css_cacher.php"
     and that was never getting cached anyway. No need for the cookie.
   Update some translations to try to combine some redundant code into foreach loops.
 - 1-Nov-11 bb Begin ending support for Netscape 4 and Internet Explorer 4.
   Moving more CSS/JS and punctuation out of the code.
   Fix typos and other bugs.
   Shorten some dupe code.
 - 26-Oct-11 bb TRANSLATORS! When you run "tools/update_translation.pl",
     keep at least the first backup file for awhile.
     Phrases are being moved and updated A LOT! And some got skipped by accident.
   Rename more js/.*php files to js/*.js;
   Add more external css and js files.
   Continue to move javascript and styles to external files.
   fgets() length became optional in PHP 4.2.0.
   Update more translate(phrases) and move more punctuation to English-US.txt.
   Trying to find ways to eliminate "class=" and "id=" when I can see how to use
     the basic HTML tags already available.
     Some things may not work in some versions of Internet Exploder
     but, most browsers play nice.
   Having an "<a title>" identical to what's already on screen seems redundant.
   Cut some dupe code and fix typos.
 - 25-Oct-11 bb Remove currently unused file "common_admin_pref.php".
     Though I may try that again later.
 - 22-Oct-11 bb Make the parameters in "tools/update_translation.pl" actually toggle. Again.